--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
   <script>
     const CLIENT_ID = '5d17d2408f714159b01a86c738be770b';
-    const REDIRECT_URI = 'https://667cb74070aa843412b7223c--dancing-crumble-c3daa2.netlify.app/';
+    const REDIRECT_URI = 'https://dancing-crumble-c3daa2.netlify.app';
     const SCOPES = 'user-read-private user-read-email user-library-read user-follow-read';
 
     let db;
